--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "keycloak-nodejs-connect module for Nest",
   "author": "John Joshua Ferrer <johnjoshuaferrer@disroot.org>",
   "license": "MIT",
+  "main": "dist/index.js",
   "scripts": {
     "start:dev": "tsc -w",
     "clean": "rimraf dist",
@@ -12,7 +13,8 @@
     "release": "release-it",
     "release:alpha": "release-it --preReleaseId=alpha --npm.tag=next --github.preRelease",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "eslint ./src --ext .ts"
+    "lint": "eslint ./src --ext .ts",
+    "prepare": "tsc"
   },
   "keywords": [
     "nestjs",
